changed: give webgui pages a proper title

--- a/manga_db/webGUI/templates/auth/login.html
+++ b/manga_db/webGUI/templates/auth/login.html
@@ -1,4 +1,10 @@
 {% extends "layout.html" %}
+
+{% block head %}
+{{ super() }}
+<title>Login - MangaDB</title>
+{% endblock %}
+
 {% block body %}
 <section class="section">
     <div class="container">
