--- a/manga_db/webGUI/templates/book.html
+++ b/manga_db/webGUI/templates/book.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+{% block head %}
+{{ super() }}
+<title>{{ book.title if book.title else 'New Book' + ' - MangaDB' }}</title>
+{% endblock %}
+
 {% block body %}
 
 {% if book %}
