added: manage tags page that also replaces Collections page        deletion/editing functions are not yet implemented

--- a/manga_db/webGUI/sass/style.scss
+++ b/manga_db/webGUI/sass/style.scss
@@ -856,3 +856,12 @@ $book-grid-fullhd-cols: 6;
 .book-grid-item-collection .book-grid-item {
     height: 100%;
 }
+
+.tcol-full-width {
+    width: 100%;
+}
+
+.tag-text-input {
+    width: 100%;
+    line-height: 1.5rem;
+}
