--- a/manga_db/webGUI/templates/layout.html
+++ b/manga_db/webGUI/templates/layout.html
@@ -147,24 +147,18 @@
                     </div>
                     <div class="navbar-item">
                         <a class="button is-nav-button" id="view-collections-btn"
-                           href="{{ url_for('main.show_collections') }}">
-                            {# mx-0 needed since we otherwise get a margin because we are not the last #}
-                            {# child, menu-description is even though it's hidden but it still adds margins #}
-                            {# decided to go for js instead #}
+                           href="{{ url_for('main.manage_tags') }}">
                             <span class="icon">
-                                <i class="fas fa-swatchbook"></i>
+                                <i class="fas fa-tags"></i>
                             </span>
                             <span class="menu-description">
-                                Collections (WIP)
+                                Manage tags
                             </span>
                         </a>
                     </div>
                     <div class="navbar-item">
                         <a class="button is-nav-button" id="refresh-cookies-btn"
                            href="{{ url_for('main.refresh_cookies_file') }}">
-                            {# mx-0 needed since we otherwise get a margin because we are not the last #}
-                            {# child, menu-description is even though it's hidden but it still adds margins #}
-                            {# decided to go for js instead #}
                             <span class="icon">
                                 <i class="fas fa-cookie-bite"></i>
                             </span>
